2006-11-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button), (clearlooks_draw_slider):
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_rc.c:
	(smooth_style_get_arrow):
	- Fix a few minor warnings.

2006-11-11  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/*:
	- replace G_MODULE_EXPORT with GE_EXPORT
	- removed GE_HIDDEN, not used
	- GE_EXPORT:
	  - defined to G_MODULE_EXPORT
	  - special cases for SUNPRO_C and if G_HAVE_GNUC_VISIBILITY is set.
	    This makes compiling with -fvisibility=hidden possible.
	- GE_INTERNAL
	  - defined to G_GNUC_INTERNAL
	  - special case for SUNPRO_C

	- replace M_PI* with G_PI* and removed unneeded definitions
	- removed include of sys/time.h from clearlooks
	- removed some min/max defines, and replaced them with MIN/MAX and CLAMP

	gtk-engines should now work on win32

2006-11-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_flat_box):
	- possible crash bug

	* engines/smooth/src/engine/shared/gtk/smooth_gtk_rc.c:
	(smooth_arrow_merge):
	- fix a leak that happend when rc styles were merged

2006-11-07  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (paint_scrollbar_trough): Improve
	scollbar trough sharpness
	* themes/Redmond/gtk-2.0/gtkrc: Set some "Redmond" style icon sizes

2006-11-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters):
	* engines/clearlooks/src/support.c: (clearlooks_get_parent_bg):
	- correctly fallback to the current style if it is not possible to
	retrieve the parents bg.

	* engines/mist/src/mist-style.c: (mist_style_draw_shadow_gap):
	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_extension):
	- added missing cairo_destroy

	* engines/thinice/src/thinice_misc.c: (thinice_draw_separator):
	* engines/thinice/src/thinice_misc.h: